--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lodash": "^4.17.11",
     "lodash-decorators": "^6.0.1",
     "nanoid": "^2.0.1",
-    "p-queue": "^4.0.0"
+    "p-queue": "^4.0.0",
+    "sift": "^8.3.3"
   },
   "peerDependencies": {
     "@leancloud/play": "^0.18.0-beta.0",
