--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script:
   - npm run lint
   - npm run build
   - npm run docs
+after_script:
+  - touch docs/.nojekyll
 deploy:
   - provider: pages
     github-token:
