--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "dependencies": {
     "debug": "^4.1.1",
     "ioredis": "^4.14.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "lodash-decorators": "^6.0.1",
     "nanoid": "^2.1.9",
     "p-queue": "^6.2.1"
   },
   "peerDependencies": {
-    "@leancloud/play": "^0.18.0-beta.10",
+    "@leancloud/play": "^1.0.0",
     "rxjs": "^6.5.4"
   }
 }
