--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
+    "@types/node": "^14.14.9",
     "debug": "^4.1.1",
     "ioredis": "^4.14.1",
     "lodash": "^4.17.20",
